# NarradiaClassic

./: '  .clang-format  .gitignore  CMakeLists.txt  build.sh  clean.sh
client/: .clangd  CMakeLists.txt  Run.sh  build.sh  build_debug.sh  clean.sh  compile_commands.json
client/src/: Adds.cpp  Adds.h  Assets.h  Calc.h  Comm.h  Conf.cpp  Conf.h  Core.cpp  Core.h  Drw_Colors.cpp  Drw_Colors.h  Drw_Images.cpp  Drw_Images.h  Drw_Text.cpp  Drw_Text.h  GuiMainPg.cpp  GuiMainPg.h  Gui_Core.cpp  Gui_Core.h  Gui_Main_Pg.cpp  Gui_Main_Pg.h  Hero.cpp  Hero.h  Main.cpp  MapGenAdd.cpp  MapGenAdd.h  Map_Gen_Add.cpp  Map_Gen_Add.h  Model_Mk.cpp  Model_Mk.h  Pages.cpp  Pages.h  Rend_Core.cpp  Rend_Core.h  Rend_Grnd.cpp  Rend_Grnd.h  Rend_Models.cpp  Rend_Models.h  World.h  WorldAdd.cpp  (+188 more)
client/src/Common/: Aliases.h  CanvasUtilities.cpp  CanvasUtilities.h  Canvas_Utilities.cpp  Canvas_Utilities.h  FileUtilities.cpp  FileUtilities.h  File_Utilities.cpp  File_Utilities.h  Singleton.h  SingletonsDisposal.cpp  SingletonsDisposal.h  Singletons_Disposal.cpp  Singletons_Disposal.h  Square.h  Utilities.cpp  Utilities.h  nSquare.h
client/src/Conf/: Const.h  ObjectConfEntry.h  ObjectsConf.cpp  nObjectConfEntry.h  nObjectsConf.cpp  nObjectsConf.h
client/src/Configuration/: Configuration.cpp  Configuration.h  ObjectFlags.h  ObjectsConf.h
client/src/Core/: Core.cpp  Core.h
client/src/Engine/: Core.cpp  Core.h
client/src/FileIO/: WorldMapRdr.cpp  WorldMapRdr.h
client/src/File_IO/: World_Map_Rdr.cpp  World_Map_Rdr.h
client/src/Math/: Calc.h
client/src/Matter/: Color.cpp  Color.h  Colors.h  GLRectF.h  Matter.h  Point.cpp  Point.h  Point3F.cpp  Point3F.h  PointF.cpp  PointF.h  RectF.cpp  RectF.h  Size.h  SizeF.h  Vertex2F.h  Vertex3F.h
client/src/WorldStructure/: WorldStructure.h
client/src/World_Structure/: World_Structure.h
client/src/actors/: mob.cpp  player.cpp
client/src/assets-model_creation/: keyframe_constr.h  mesh_obtainer.h  model_constr.cpp  model_part_constr.h
client/src/comm/: math_sys.cpp  math_sys.h  matter.cpp  matter.h
client/src/conf/: consts.h  mobs_conf.cpp  mobs_conf.h  objects_conf.cpp  objects_conf.h
client/src/core/: console.cpp  console.h  console_calc.cpp  console_calc.h  console_v.cpp  console_v.h  cursor.cpp  cursor.h  cursor_v.cpp  cursor_v.h  engine.cpp  engine.h  engine_c.cpp  engine_c.h  engine_v.cpp  engine_v.h  fps_capper.cpp  fps_capper.h  graphics.h  graphics_gl_v.cpp  graphics_gl_v.h  graphics_v.cpp  graphics_v.h  iscene.cpp  iscene.h  iscene_c.cpp  iscene_c.h  iscene_v.cpp  iscene_v.h  kb_input.cpp  kb_input.h  mouse_input.cpp  mouse_input.h  scene_mngr.cpp  scene_mngr.h  scene_mngr_c.cpp  scene_mngr_c.h  scene_mngr_v.cpp  scene_mngr_v.h  scene_names.h  (+2 more)
client/src/file_io/: map_loader.cpp  map_loader.h  world_conf_reader.h
client/src/gui-core/: gui_button.cpp  gui_button.h  gui_button_v.cpp  gui_button_v.h  gui_component.h  gui_component_v.h  gui_container.cpp  gui_container.h  gui_container_v.cpp  gui_container_v.h  gui_movable_container.cpp  gui_movable_container.h  gui_movable_container_v.cpp  gui_movable_container_v.h  gui_window.cpp  gui_window.h  gui_window_close_button.cpp  gui_window_close_button.h  gui_window_close_button_v.cpp  gui_window_close_button_v.h  gui_window_v.cpp  gui_window_v.h  scene_gui.cpp  scene_gui.h  scene_gui_v.cpp  scene_gui_v.h
client/src/main_scene-gui/: experience_bar.cpp  experience_bar.h  experience_bar_v.cpp  experience_bar_v.h  gui_window_world_map.cpp  gui_window_world_map.h  gui_window_world_map_v.cpp  gui_window_world_map_v.h  status_panel.h  status_panel_v.cpp  status_panel_v.h
client/src/main_scene-modules/: combat_chase_movement_module.cpp  combat_chase_movement_module.h  combat_module.cpp  combat_module.h  fps_counter_module.cpp  fps_counter_module.h  fps_counter_module_v.cpp  kb_bindings_module.cpp  kb_bindings_module.h  keyboard_movement_module.cpp  keyboard_movement_module.h  mob_death_handling_module.cpp  mob_death_handling_module.h  mob_movement_module.cpp  mob_movement_module.h  mob_targeting_module.cpp  mob_targeting_module.h  mouse_movement_module.cpp  mouse_movement_module.h  mouse_rotation_module.cpp  mouse_rotation_module.h  player_spawn_positioning_module.cpp  player_spawn_positioning_module.h  skill_performing_module.cpp  skill_performing_module.h  tile_hovering_module.cpp  tile_hovering_module.h
client/src/main_scene-modules-world_view/: camera.cpp  camera.h  world_view_module.cpp  world_view_module.h  world_view_module_v.cpp  world_view_module_v.h
client/src/model_creation/: mesh_obtainer.cpp  model_constr.h  model_part_constr.cpp
client/src/pg_intro/: intro_pg_v.h
client/src/pg_main/: main_pg_v.cpp  main_pg_v.h
client/src/pg_main_menu/: main_menu_pg.cpp  main_menu_pg.h  main_menu_pg_v.cpp  model_display_add.cpp  model_display_add.h  model_display_add_v.cpp  model_display_add_v.h
client/src/pg_map_creation/: map_creation_pg.h  map_creation_pg_c.cpp  map_creation_pg_c.h  map_creation_pg_v.cpp  map_creation_pg_v.h
client/src/rend/: body_data.h  camera_gl.h  rend_2d_images_v.cpp  rend_2d_images_v.h  rend_2d_solid_colors_v.cpp  rend_2d_solid_colors_v.h  rend_base.cpp  rend_base.h  rend_base_v.cpp  rend_base_v.h  rend_tiles_v.cpp  rend_tiles_v.h  renderer_2d_images_v.cpp  renderer_2d_images_v.h  renderer_2d_solid_colors_v.cpp  renderer_base.cpp  renderer_base.h  renderer_base_v.cpp  renderer_base_v.h  renderer_tiles_v.cpp  renderer_tiles_v.h  shader_program.cpp  shader_program.h  shader_program_v.cpp  shader_program_v.h
client/src/rend-models/: rend_models_v.cpp  rend_models_v.h  renderer_models_v.cpp  renderer_models_v.h
client/src/rend-text/: renderer_text.cpp  renderer_text.h
client/src/render-models/: renderer_models_v.cpp  renderer_models_v.h
client/src/render-text/: font.cpp  font.h  renderer_text.cpp  renderer_text.h
map_generator/: .clangd  CMakeLists.txt  build.sh  clean.sh  run.sh
map_generator/src/: main.cpp
(+2863 files in other folders)
